--- a/config.json
+++ b/config.json
@@ -18,8 +18,7 @@
         "color":["30", "31", "25"],
         "color2":["124", "157", "156", "92", "98"],
         "combatShields":["shieldpatterns.shieldcolor1.shieldcolor2.1596.-1596.764.764.1.0.0.144.116.116.494.494.794.765.0.1.0"],
-        "combatBanners":["shieldpatterns.shieldcolor1.shieldcolor2.1596.-1596.764.764.1.0.0.144.116.116.494.494.794.765.0.1.0"],
-        "FollowKingdomColors": "false"
+        "combatBanners":["shieldpatterns.shieldcolor1.shieldcolor2.1596.-1596.764.764.1.0.0.144.116.116.494.494.794.765.0.1.0"]
       },
 
       "Calsea":{
